2 Feb Memory functions added

--- a/calculator.html
+++ b/calculator.html
@@ -31,11 +31,11 @@
                     <div class="col-2 p-2 text-center btn key me-1">F-E</div>
                 </div>
                 <div class="row d-flex mb-1">
-                    <div class="col p-2 text-center btn key me-1 text-muted">MC</div>
-                    <div class="col p-2 text-center btn key me-1 text-muted">MR</div>
-                    <div class="col p-2 text-center btn key me-1">M+</div>
-                    <div class="col p-2 text-center btn key me-1">M-</div>
-                    <div class="col p-2 text-center btn key me-1">MS</div>
+                    <div class="col p-2 text-center btn key me-1 text-muted" onclick="memoryClear()">MC</div>
+                    <div class="col p-2 text-center btn key me-1 text-muted" onclick="memoryRead()">MR</div>
+                    <div class="col p-2 text-center btn key me-1" onclick="memoryAdd()">M+</div>
+                    <div class="col p-2 text-center btn key me-1" onclick="memorySub()">M-</div>
+                    <div class="col p-2 text-center btn key me-1" onclick="memorySave()">MS</div>
                 </div>
                 <div class="row d-flex mb-1">
                     <div class="col-3 p-2 text-center btn key me-1 " id="trignometry_function_button" onclick="trignometry()">Trignometry</div>
