form validation remaining

--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JNV Jamnagar Alumni Association</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font-awesome/css/all.min.css">
+    <link rel="stylesheet" href="/js_practicals/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/js_practicals/css/font-awesome/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="bg-dark" data-spy="scroll" data-target="#navbar" data-offset-top="200">
     <nav class="navbar sticky-top navbar-expand-lg bg-dark" id="navbar">
         <div class="container">
-            <img src="images/logo-small.png" class="me-3" alt="">
+            <img src="/js_practicals/images/logo-small.png" class="me-3" alt="">
             <a class="navbar-brand text-light" href="#">JNV Jamnagar Alumni Association</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,11 +28,11 @@
                     <li class="nav-item">
                         <a class="nav-link text-light" href="#batches">Batches</a>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="events.html">Events</a>
+                        <a class="nav-link text-light" href="#events">Events</a>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="testimonials.html" >Testimonials</a>
+                        <a class="nav-link text-light" href="#testimonials" >Testimonials</a>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="photos.html" >Photo Gallery</a>
+                        <a class="nav-link text-light" href="register.html" >Register</a>
                     </li>
                 </ul>
             </div>
@@ -48,19 +48,19 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100 h-50" src="images/slider-1.png" alt="First slide">
+                    <img class="d-block w-100 h-50" src="/js_practicals/images/slider-1.png" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/slider-2.png" alt="Second slide">
+                    <img class="d-block w-100" src="/js_practicals/images/slider-2.png" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/slider-3.png" alt="Third slide">
+                    <img class="d-block w-100" src="/js_practicals/images/slider-3.png" alt="Third slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/slider-4.png" alt="Third slide">
+                    <img class="d-block w-100" src="/js_practicals/images/slider-4.png" alt="Third slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/slider-5.png" alt="Third slide">
+                    <img class="d-block w-100" src="/js_practicals/images/slider-5.png" alt="Third slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -83,7 +83,7 @@
             <div class="row text-center text-light">
                 <h1>COME IN TO LEARN, GO OUT TO SERVE</h1>
                 <div class="col-sm-2 mt-5">
-                    <img src="images/jnv_logo.jpg" class="img-fluid rounded" alt="jnv_logo">
+                    <img src="/js_practicals/images/jnv_logo.jpg" class="img-fluid rounded" alt="jnv_logo">
                 </div>
                 <div class="col-sm-3 mt-5"></div>
                 <div class="col-sm-7 text-light mt-5 text-start">
@@ -140,7 +140,7 @@
                         <div class="row">
                             <div class="col-md-2">
                                 <div class="card">
-                                    <img src="images/person-1.png" class="card-img-top" alt="Card Image">
+                                    <img src="/js_practicals/images/person-1.png" class="card-img-top" alt="Card Image">
                                     <div class="card-body text-center">
                                         <h5 class="card-title">2000-2006</h5>
                                     </div>
@@ -148,7 +148,7 @@
                             </div>
                             <div class="col-md-2">
                                 <div class="card">
-                                    <img src="images/person-2.png" class="card-img-top" alt="Card Image">
+                                    <img src="/js_practicals/images/person-2.png" class="card-img-top" alt="Card Image">
                                     <div class="card-body text-center">
                                         <h5 class="card-title">2001-2007</h5>
                                     </div>
@@ -156,7 +156,7 @@
                             </div>
                             <div class="col-md-2">
                                 <div class="card">
-                                    <img src="images/person-3.png" class="card-img-top" alt="Card Image">
+                                    <img src="/js_practicals/images/person-3.png" class="card-img-top" alt="Card Image">
                                     <div class="card-body text-center">
                                         <h5 class="card-title">2002-2008</h5>
                                     </div>
@@ -164,7 +164,7 @@
                             </div>
                             <div class="col-md-2">
                                 <div class="card">
-                                    <img src="images/person-1.png" class="card-img-top" alt="Card Image">
+                                    <img src="/js_practicals/images/person-1.png" class="card-img-top" alt="Card Image">
                                     <div class="card-body text-center">
                                         <h5 class="card-title">2003-2009</h5>
                                     </div>
@@ -172,7 +172,7 @@
                             </div>
                             <div class="col-md-2">
                                 <div class="card">
-                                    <img src="images/person-2.png" class="card-img-top" alt="Card Image">
+                                    <img src="/js_practicals/images/person-2.png" class="card-img-top" alt="Card Image">
                                     <div class="card-body text-center">
                                         <h5 class="card-title">2004-2010</h5>
                                     </div>
@@ -180,7 +180,7 @@
                             </div>
                             <div class="col-md-2">
                                 <div class="card">
-                                    <img src="images/person-1.png" class="card-img-top" alt="Card Image">
+                                    <img src="/js_practicals/images/person-1.png" class="card-img-top" alt="Card Image">
                                     <div class="card-body text-center">
                                         <h5 class="card-title">2005-2011</h5>
                                     </div>
@@ -270,7 +270,7 @@
                                         has
                                         provided me and I highly recommend it to all JNV Jamnagar alumni."
                                     </p>
-                                    <img src="images/person-1.png" alt="person-1" class="h-25 w-25">
+                                    <img src="/js_practicals/images/person-1.png" alt="person-1" class="h-25 w-25">
                                 </div>
 
                                 <h4 class="card-title">John Doe</h4>
@@ -294,7 +294,7 @@
                                         my
                                         involvement in the future."
                                     </p>
-                                    <img src="images/person-2.png" alt="" class="h-25 w-25">
+                                    <img src="/js_practicals/images/person-2.png" alt="" class="h-25 w-25">
                                 </div>
 
                                 <h4 class="card-title">Jane Doe</h4>
@@ -321,7 +321,7 @@
                                         make a
                                         positive impact."
                                     </p>
-                                    <img src="images/person-3.png" alt="" class="h-25 w-25">
+                                    <img src="/js_practicals/images/person-3.png" alt="" class="h-25 w-25">
                                 </div>
 
                                 <h4 class="card-title">Jim Smith</h4>
@@ -350,32 +350,32 @@
             <div class="row mt-5">
                 <div class="col-lg-3 col-md-4 col-6">
                     <a href="photo1.jpg" data-toggle="lightbox" data-title="Photo 1">
-                        <img src="images/slider-1.png" class="img-fluid" alt="Photo 1">
+                        <img src="/js_practicals/images/slider-1.png" class="img-fluid" alt="Photo 1">
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-6">
                     <a href="photo2.jpg" data-toggle="lightbox" data-title="Photo 2">
-                        <img src="images/slider-2.png" class="img-fluid" alt="Photo 2">
+                        <img src="/js_practicals/images/slider-2.png" class="img-fluid" alt="Photo 2">
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-6">
                     <a href="photo3.jpg" data-toggle="lightbox" data-title="Photo 3">
-                        <img src="images/slider-3.png" class="img-fluid" alt="Photo 3">
+                        <img src="/js_practicals/images/slider-3.png" class="img-fluid" alt="Photo 3">
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-6">
                     <a href="photo4.jpg" data-toggle="lightbox" data-title="Photo 4">
-                        <img src="images/slider-4.png" class="img-fluid" alt="Photo 4">
+                        <img src="/js_practicals/images/slider-4.png" class="img-fluid" alt="Photo 4">
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-6">
                     <a href="photo5.jpg" data-toggle="lightbox" data-title="Photo 5">
-                        <img src="images/slider-5.png" class="img-fluid" alt="Photo 5">
+                        <img src="/js_practicals/images/slider-5.png" class="img-fluid" alt="Photo 5">
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-6">
                     <a href="photo6.jpg" data-toggle="lightbox" data-title="Photo 6">
-                        <img src="images/slider-1.png" class="img-fluid" alt="Photo 6">
+                        <img src="/js_practicals/images/slider-1.png" class="img-fluid" alt="Photo 6">
                     </a>
                 </div>
             </div>
@@ -396,7 +396,7 @@
                         are always looking for new ways to better serve our clients.</p>
                 </div>
                 <div class="col-md-4 about_us_border d-flex">
-                    <img src="images/logo-small.png" class="my-5 mx-auto" alt="">
+                    <img src="/js_practicals/images/logo-small.png" class="my-5 mx-auto" alt="">
                 </div>
                 <div class="col-md-4">
                     <div class="row">
@@ -430,10 +430,10 @@
         style="display: block;position: fixed; margin-bottom: 0px; margin-left: 0px;">
         <i class="fas fa-arrow-up"></i>
     </button> -->
-    <script src="css/jquery-3.2.1.slim.min.js"></script>
-    <script src="css/popper.min.js"></script>
-    <script src="css/bootstrap.min.js"></script>
-    <script src="assignment2.js"></script>
+    <script src="/js_practicals/css/jquery-3.2.1.slim.min.js"></script>
+    <script src="/js_practicals/css/popper.min.js"></script>
+    <script src="/js_practicals/css/bootstrap.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
