--- a/assignment3/register.html
+++ b/assignment3/register.html
@@ -42,14 +42,13 @@
     <section class="my-5">
         <div class="d-flex flex-column">
             <div class="form_div container d-flex justify-content-center">
-                <form action="" class="text-center p-4 border rounded text-light col-8"
-                    id="form">
+                <form action="" class="text-center p-4 border rounded text-light col-8" id="form">
                     <h3 class="text-light">Registration Form</h3>
                     <hr>
                     <!-- id -->
                     <div class="form-group d-flex">
                         <label for="id" class="col-2 rounded text-start">ID </label>
-                        <input type="text" name="id" class="col-10 rounded" id="id" value="" required>
+                        <input type="text" name="id" class="col-10 rounded" id="id" value="" required placeholder="Id">
                     </div>
                     <label for="id_error" id="id_error" class="error"></label>
                     <!-- fname -->
@@ -80,7 +79,8 @@
                     <!-- image -->
                     <div class="form-group d-flex">
                         <label for="image" class="col-2 rounded text-start">Photo </label>
-                        <input type="file" name="image" class="col-10 rounded" id="image" required>
+                        <input type="file" name="image" class="col-10 rounded" id="image" required
+                            onchange="readURL(this)">
                         <img src="" alt="imageofuser" id="display_image" style="display: none;">
                     </div>
                     <label for="img_error" id="img_error" class="error"></label>
