--- a/assignment2.html
+++ b/assignment2.html
@@ -22,17 +22,26 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto w-100 justify-content-end">
-                    <li class="nav-item active">
-                        <a class="nav-link active text-light" href="#">Home</a>
+                    <li class="nav-item">
+                        <button type="button" class="btn btn-dark text-white" onclick="scrollHide('home')">Home</button>
+                        <!-- <a class="nav-link active text-light" href="#">Home</a> -->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="batches.html">Batches</a>
+                        <button type="button" class="btn btn-dark text-white" onclick="scrollHide('batches')">Batches</button>
+                        <!-- <a class="nav-link text-light" href="batches.html">Batches</a> -->
+                    </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="events.html">Events</a>
+                        <button type="button" class="btn btn-dark text-white" onclick="scrollHide('events')">Events</button>
+                        <!-- <a class="nav-link text-light" href="events.html">Events</a> -->
+                    </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="testimonials.html" >Testimonials</a>
+                        <button type="button" class="btn btn-dark text-white"
+                            onclick="scrollHide('testimonials')">Testimonials</button>
+                        <!-- <a class="nav-link text-light" href="testimonials.html" >Testimonials</a> -->
+                    </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="photos.html" >Photo Gallery</a>
+                        <!-- <a class="nav-link text-light" href="photos.html" >Photo Gallery</a> -->
+                        <button type="button" class="btn btn-dark text-white" onclick="scrollHide('photos')">Photos</button>
                     </li>
                 </ul>
             </div>
@@ -78,7 +87,7 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
-    <section class="mt-5" id="batches">
+    <section class="mt-5 batches" id="batches">
         <div class="container p-5">
             <div class="row text-center text-light">
                 <h1>COME IN TO LEARN, GO OUT TO SERVE</h1>
@@ -107,9 +116,7 @@
                 </div>
             </div>
         </div>
-    </section>
 
-    <section class="mt-5">
         <div class="container bg-dark p-5">
             <div class="row text-center">
                 <h1 class="text-light">Our Batches</h1>
@@ -121,20 +128,6 @@
                             <option value="2">2011-2015</option>
                             <option value="3">2016-2020</option>
                         </select>
-
-                        <!-- <div class="btn-group">
-                            <button type="button" class="btn btn-primary text-dark">Batches</button>
-                            <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split text-dark"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="sr-only">Toggle Dropdown</span>
-                            </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">2006-2010</a>
-                                <a class="dropdown-item" href="#">2011-2015</a>
-                                <a class="dropdown-item" href="#">2016-2020</a>
-                                <a class="dropdown-item" href="#">2000-2005</a>
-                            </div>
-                        </div> -->
                     </div>
                     <div class="col-10">
                         <div class="row">
@@ -193,7 +186,7 @@
         </div>
     </section>
 
-    <section class="mt-5" id="events">
+    <section class="mt-5 events" id="events">
         <div class="container p-5">
             <h1 class="text-center text-light">Upcoming Events : Stay Tuned</h1>
             <div class="row mt-5">
@@ -235,7 +228,7 @@
 
     </section>
 
-    <section class="container mt-5" id="testimonials">
+    <section class="container mt-5 testimonials" id="testimonials">
         <div class="p-5">
             <div class="text-center">
                 <h1 class="heading text-light">
@@ -344,7 +337,7 @@
         </div>
     </section>
 
-    <section class="mt-5" id="photos">
+    <section class="mt-5 photos" id="photos">
         <div class="container p-5">
             <h1 class="text-center text-light">Photo Gallery</h1>
             <div class="row mt-5">
@@ -437,10 +430,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
