--- a/assignment3/register.html
+++ b/assignment3/register.html
@@ -79,7 +79,7 @@
                     <!-- image -->
                     <div class="form-group d-flex">
                         <label for="image" class="col-2 rounded text-start">Photo </label>
-                        <input type="file" name="image" class="col-10 rounded" id="image" required
+                        <input type="file" name="image" class="col-10 rounded" id="image" 
                             onchange="readURL(this)">
                         <img src="" alt="imageofuser" id="display_image" style="display: none;">
                     </div>
