Suggested changes by mentor
tap2top button and section hide logic changed

--- a/assignment2.html
+++ b/assignment2.html
@@ -48,7 +48,7 @@
         </div>
     </nav>
 
-    <section class="d-flex justify-content-center" id="carousel">
+    <section class="d-flex justify-content-center section_toggle" id="carousel">
         <div id="carouselExampleIndicators" class="carousel slide w-75 h-50" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -87,7 +87,7 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
-    <section class="mt-5 batches" id="batches">
+    <section class="mt-5 batches section_toggle" id="batches">
         <div class="container p-5">
             <div class="row text-center text-light">
                 <h1>COME IN TO LEARN, GO OUT TO SERVE</h1>
@@ -186,7 +186,7 @@
         </div>
     </section>
 
-    <section class="mt-5 events" id="events">
+    <section class="mt-5 events section_toggle" id="events">
         <div class="container p-5">
             <h1 class="text-center text-light">Upcoming Events : Stay Tuned</h1>
             <div class="row mt-5">
@@ -228,7 +228,7 @@
 
     </section>
 
-    <section class="container mt-5 testimonials" id="testimonials">
+    <section class="container mt-5 testimonials section_toggle" id="testimonials">
         <div class="p-5">
             <div class="text-center">
                 <h1 class="heading text-light">
@@ -337,7 +337,7 @@
         </div>
     </section>
 
-    <section class="mt-5 photos" id="photos">
+    <section class="mt-5 photos section_toggle" id="photos">
         <div class="container p-5">
             <h1 class="text-center text-light">Photo Gallery</h1>
             <div class="row mt-5">
